--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,11 +13,17 @@
 }
 
 body {
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  font-family: Roboto;
+  padding: 0;
+  margin: 0;
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
