--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@
 body {
   height: 100vh;
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
   color: rgb(var(--foreground-rgb));
   font-family: Roboto;
   padding: 0;
